--- a/css/style-media.css
+++ b/css/style-media.css
@@ -7,8 +7,9 @@
 
 
 
-/***** SM - small < 576px ***************************/
-@media screen and (min-width: 576px) {
+/**** MD - medium < 768px *************/
+
+@media screen and (min-width: 768px) {
 
     *{
         color: rgb(109, 46, 42);
@@ -28,13 +29,12 @@
 }
     
 
-/***** MD - medium < 768px **************************/
+/**** LG - large < 992px *************/
 @media screen and (min-width: 768px) {
 
     *{
         color: rgb(61, 207, 45);
-        border:1px solid rgba(40, 118, 18, 0.645);
-      
+        border:1px solid rgba(40, 118, 18, 0.645);  
     }
     
     [class*="row"] *,
