--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,11 @@
 /* *******************************
         GRIGLIA DI CONTROLLO
  ***************************** */
-#DevoVederciChiaro {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    z-index: 4;
-    left: 50%;
-    transform: translateX(-49%);
-    opacity: 100%;
-  display: none;
-}
-
-
-#DevoVederciChiaro>* {
-    border: 1px solid rgba(67, 64, 64, 0.152);
-}
-
-#DevoVederciChiaro>*>* {
-    background-color: rgba(223, 188, 188, 0.246);
-    height: 100%;
-}
-
 * {
-    color: rgb(42, 91, 109);
+  
     border: 1px solid rgba(56, 71, 135, 0.442);
 }
 
-[class*="row"] *,
-[class*="col"] {
-    border: 1px solid rgba(59, 151, 182, 0.572);
-}
 
 
 /* *******************************
@@ -52,15 +27,28 @@
 /* *******************************
             JUMBOTRONE
  ***************************** */
-
-
-
-.star .fa-star::after,
-.star .fa-star::before {
-    content: "";
-    background-color: red;
-    width: 40px;
-    height: 5px;
-    border-radius: 20px;
-
+*::before{
+    padding: 0;
+    margin: 0;
 }
+
+
+.star-icon{
+    width: 2rem;
+    font-size: 2rem;
+    vertical-align: middle;
+}
+
+.tar-container .star-icon::after,
+.star-container .star-icon::before,
+.star-stroke{
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 100px;
+    height: 3px;
+    background-color: rgb(3, 18, 31);
+    border-radius: 50px;
+    margin: 10px;
+}
+
